# DesignPatterns

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE
headers/: BUILD  Composite.hpp  Facade.hpp  FlyWeight.hpp  Singleton.hpp
lib/: Adapter.hpp  BUILD  CMakeLists.txt  Decorator.hpp  Factory.hpp  Singleton.hpp  Strategy.hpp
lib/sources/: Composite.cpp  Facade.cpp  Factory.cpp  FlyWeight.cpp  Singleton.cpp
main/: BUILD  CMakeLists.txt  main.cpp
sources/: BUILD  CMakeLists.txt  Composite.cpp  Facade.cpp  Factory.cpp  FlyWeight.cpp  Singleton.cpp  main.cpp
tests/: BUILD  CMakeLists.txt  testAdapter.hpp  testComposite.h  testComposite.hpp  testDecorator.hpp  testFacade.h  testFacade.hpp  testFactory.h  testFactory.hpp  testFlyWeight.hpp  testSingleton.h  testSingleton.hpp  testStrategy.hpp  tetsFlyWeight.h
